--- a/ros_webinterface/index.html
+++ b/ros_webinterface/index.html
@@ -26,9 +26,9 @@
 <script src="ros2d.min.js"></script>
 
 <!-- Custom CSS -->
-<link rel="stylesheet" href="css.css">
 <link rel="stylesheet" href="styles.css">
 
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 
 
@@ -81,6 +81,8 @@
             <div id="map"></div>
             <button class="Start_Map">매핑 시작</button>
             <button class="Stop_Map">매핑 종료</button>
+            <!-- 처음에는 숨겨져 있어야 하므로 style을 사용해 display를 none으로 설정 -->
+            <button class="Mapping_Again" style="display: none;">다시 매핑하기</button>
         </div>
         </div>
       </div>
