saveMap_function_and_setting_detail

--- a/ros_webinterface/index.html
+++ b/ros_webinterface/index.html
@@ -39,13 +39,13 @@
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
         <div class="container">
             <a class="navbar-brand" href="info.html">
-                <img src="/icons/info_icon.png" alt="" width="30" height="24">
+                <img src="./icons/info_icon.png" alt="" width="30" height="24">
             </a>
             <a class="navbar-brand" href="index.html">
                 CareBuddy
             </a>
             <a class="navbar-brand" href="status.html">
-                <img src="/icons/buddy_icon.png" alt="" width="30" height="24">
+                <img src="./icons/buddy_icon.png" alt="" width="30" height="24">
             </a>
         </div>
     </nav>
