--- a/ros_webinterface/setting.html
+++ b/ros_webinterface/setting.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CareBuddy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link rel="stylesheet" , href="styles.css">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- jQuery (Bootstrap 5는 jQuery에 의존하지 않음, 필요에 따라 추가) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
@@ -40,18 +42,6 @@
     </div>
   </div>
 </div>
-  
-  <div class = "SetWifi">
-    <h4 id = "question">와이파이를 설정해주세요</h4>
-    <div class = 'choice'>
-      <input type="text" class="form-control" id="wifiinput" placeholder="Your CareBuddy Name">
-    </div>
-
-    <div class = 'select'>
-    <button id = 'pre2' class="pre"role="button">이전</button>
-    <button id = 'next2' class="next"role="button">다음</button> <br>
-  </div>
-  </div>
   
   <div class = "SetFre">
     <h4 id = "question">사용하는 공기청정기의 필터 교체 주기를 선택해주세요.</h4>
@@ -102,9 +92,6 @@
         기기 명칭 : <span id="deviceName"></span><br/>
       </h5>
       <h5 class="info-item">
-        와이파이 : <span id="wifiSettings"></span><br/>
-      </h5>
-      <h5 class="info-item">
         교체 주기 : <span id="filterChangeFrequency"></span><br/>
       </h5>
       <h5 class="info-item">
@@ -123,11 +110,10 @@
   <script>
     $(document).ready(function() {
         // Hide all sections except the first one on initial load
-        $('.SetWifi, .SetFre, .SetFreAir, .SetDisturb, .Check').hide();
+        $('.SetFre, .SetFreAir, .SetDisturb, .Check').hide();
       
         // Initialize variables to store the settings
         var deviceName = '';
-        var wifiSettings = '';
         var filterChangeFrequency = '';
         var ventilationFrequency = '';
         var doNotDisturbTimes = '';
@@ -142,16 +128,7 @@
         $('#next').click(function(){
             var deviceName = $('#nameInput').val();
             localStorage.setItem('deviceName', deviceName);
-            showNextSection('.SetName', '.SetWifi');
-        });
-        $('#pre2').click(function(){
-          $('.SetWifi').css('display', 'none');
-          $('.SetName').css('display', 'block');
-        });
-        $('#next2').click(function(){
-            var wifiSettings = $('#wifiinput').val();
-            localStorage.setItem('wifiSettings', wifiSettings);
-            showNextSection('.SetWifi', '.SetFre');
+            showNextSection('.SetName', '.SetFre');
         });
     
         // Example: Saving the choice for filter change frequency directly when a button is clicked
@@ -200,7 +177,6 @@
         // Function to update the Check page with the current settings from localStorage
         function updateCheckPage() {
             $('#deviceName').text(localStorage.getItem('deviceName'));
-            $('#wifiSettings').text(localStorage.getItem('wifiSettings'));
             $('#filterChangeFrequency').text(localStorage.getItem('filterChangeFrequency'));
             $('#ventilationFrequency').text(localStorage.getItem('ventilationFrequency'));
             $('#doNotDisturbTimes').text(localStorage.getItem('doNotDisturbTimes'));
