--- a/ros_webinterface/info.html
+++ b/ros_webinterface/info.html
@@ -32,8 +32,8 @@
     <h4>설정</h4>
     <div class="grid-container">
 
-        <!-- 케어버디 명칭 변경 -->
-        <div class="grid-item">
+        <!-- 케어버디 명칭 변경, 수정된 클래스 추가 -->
+        <div class="grid-item grid-item-double">
             <img src="./icons/buddy_icon.png" alt="아이콘" width="30" height="30">
             <h6 class="info_detail" id="changeDeviceName">케어버디 명칭 변경<br/>기기 명칭 변경</h6>
         </div>
@@ -67,7 +67,6 @@
             </div>
         </div>
         
-
     </div>
 
     <div class="grid-container">
