--- a/ros_webinterface/info.html
+++ b/ros_webinterface/info.html
@@ -21,7 +21,7 @@
                 <img src="./icons/info_icon.png" alt="" width="30" height="24">
             </a>
             <a class="navbar-brand" href="index.html">
-                CareBuddy
+                <img src="./icons/logo.jpeg" alt="" width="30" height="24">
             </a>
             <a class="navbar-brand" href="status.html">
                 <img src="./icons/buddy_icon.png" alt="" width="30" height="24">
@@ -76,8 +76,7 @@
             <img src="./icons/map.png" alt="아이콘" width="30" height="30"> <br/>
             <h5 class="info_name">공간 설정</h5>
             <h6 class="info_detail">공간 이름 변경</h6>
-            <h6 class="info_detail">방해금지 시간 설정</h6>
-            <h6 class="info_detail">금지 구역 지정</h6>
+            <h6 class="info_detail">방해금지 시간 설정금지 구역 지정</h6>
             <h6 class="info_detail">청정 기준 설정</h6>
         </div>
 
