--- a/ros_webinterface/status.html
+++ b/ros_webinterface/status.html
@@ -17,7 +17,7 @@
                 <img src="./icons/info_icon.png" alt="" width="30" height="24">
             </a>
             <a class="navbar-brand" href="index.html">
-                CareBuddy
+                <img src="./icons/logo.jpeg" alt="">
             </a>
             <a class="navbar-brand" href="status.html">
                 <img src="./icons/buddy_icon.png" alt="" width="30" height="24">
